bMotion CHANGELOG
-----------------

* = changed/fixed
+ = added
- = removed

2003/08/03
v0.0.7

* fixed [ 680856 ] irc_nick_away plugin returns wrong values
* fixed [ 729155 ] $nick error
* fixed [ 726241 ] Techsupport does not use elections
* tidied up code in trivia plugin
* moved colen-chars handler to plugin
* added [ 749777 ] specify time for shutting up
* fixed long-standing "Tcl error [bMotion_event_action]: can't read "newnick": no such variable" error after 2am inspriation
* track most recent complex plugin fired
* complex_smilies refuses to fire twice in a row
* fixed [ 772777 ] /action hands <bot> a <whatever> | bot replies via NOTICE
*   `- no longer check for +I to take drugs of someone, let flood checking handle abuse
* fixed [ 774721 ] botnicks check can break in courtmartial
* fixed [ 782346 ] Can't read bMotionInfo(adminSilence,CHANNEL)
* changed probability of the away plugin firing
* diagnostic output goes to putlog not loglev d

+ added feature request [ 727005 ] courtmarital... with a kick. settings for it are in the complex_startrek plugin file
+ added output_pinky plugin
+ taught the trivia plugin to guess dates too
+ added support for %REPEAT in abstracts: %REPEAT{mincount:maxcount:text} will repeat text a random number of times in the given range
*   `- updated some abstracts to use %REPEAT{} (e.g. "wh%REPEAT{3:6:e}")
+ added complex_woot
+ implemented [ 747502 ] Public Away Option (added new settings to settings file)
+ bMotion gains a jeffk output plugin...
+ ... and a pinky and the brain output plugin (enabled by default)

- don't announce that !mood isn't available any more

2003/04/13
v0.0.6

+ added initial self-diagnostics (more to come)
+ now uses an irc event plugin to handle joins/parts/etc [simsea]
+ added 3rd party modules support (i.e. for API for plugins)
+ added complex_activate plugin
+ added function to clean stuff like "(*&$(" off the end of a line
*   `- dutchify is now a module called by the relavent plugins